# future-vibe-reown

./: .env  .env.local  .gitignore  ARCHITECTURE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  ENVIRONMENT_SETUP.md  ENV_CORRECTED.txt  ENV_EXAMPLE.txt  ENV_HELIUS_TEMPLATE.txt  ENV_VARIABLES.txt  HELIUS_SETUP.md  IMPLEMENTATION_COMPLETE.md  NEXT_STEPS.md  README.md  REOWN_PROJECT_SETUP.md  SETUP.md  SMART_CONTRACTS_COMPLETE.md  SMART_CONTRACT_DEPLOYMENT.md  TESTING_A_TO_Z.md  VIBES_IMPLEMENTATION.md  deployment-info.json  env.development  env.local.example  env.mainnet  env.testnet  next.config.ts  package-lock.json  package.json  simulate-deployment.js  tailwind.config.js  test-smart-contracts.js  token-mint-keypair.json  update-env.js
anchor-project/: Anchor.toml  deploy.js  package-lock.json  package.json
anchor-project/programs/vibes-presale/: Cargo.toml
anchor-project/programs/vibes-presale/src/: lib.rs
docs/: RPC_EXPLANATION.md
scripts/: switch-env.sh
src/app/: globals.css  layout.tsx  page.tsx
src/components/: BNPolyfillProvider.tsx  DevnetTestingConfig.tsx  EnvironmentDebug.tsx  Footer.tsx  Navbar.tsx  PresaleSection.tsx  PricingTable.tsx  StakingSection.tsx  TransactionInfo.tsx  VestingDashboard.tsx  index.ts
src/config/: anchor.ts  appkit.ts  environment.ts  font.ts  paths.ts  pricing.ts  solana.ts
src/hooks/: index.ts  usePresaleStats.ts  useSmartContractVesting.ts  useSolPrice.ts  useUsdcPrice.ts  useVesting.ts
src/i18n/: request.ts
src/lib/: anchor-browser.ts  anchor-dynamic.ts  anchor-safe.ts  (+2 more)
wallets/: collection-authority.json
(+18 files in other folders)
